Next Release
============

- Feature 1288 "Code cleanup"

	- Code cleanup of accountants_view.py
